syntax = "proto3";

package com.gotocompany.stencil;

option java_multiple_files = true;
option java_package = "com.gotocompany.stencil";
option java_outer_classname = "AccountDbAccounts";


message account_db_accounts {
    message ID {
        string data = 1;
    }
    ID id = 1;
    string operationtype = 2;
    string clustertime = 3;
    message FULLDOCUMENT {
        string id = 1;
        string cif = 2;
        string customerid = 3;
        message ACCOUNTS_ITEM {
            double monthlyaveragebalance = 1;
        }
    }
}