syntax = "proto3";

package com.gotocompany.stencil;

message ImplicitOuterClass {
    string sample_string = 1;
    message Inner {
      string one = 1;
    }
}
