syntax = "proto3";

package com.gotocompany.stencil;

option java_multiple_files = true;
option java_package = "com.gotocompany.stencil";
option java_outer_classname = "TestMessageProto";

message TestKey {
    string sample_string = 1;
}

message TestMessage {
    string sample_string = 1;
}

message TestMessageSuperset {
    string sample_string = 1;
    bool success = 9;
}
